Correction des collapses de la page produit séléctionné et de la page connexion

--- a/src/Page/Login/Login.css
+++ b/src/Page/Login/Login.css
@@ -50,6 +50,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    background-color: #f5f5f5;
 }
 
 .collapse-header-container span {
